Remove kapt.